# Functional_Programming_In_Scheme-Haskell

./: README.md
AdvancedScheme-hg387/: Makefile  README.md  run-tests.rkt
AdvancedScheme-hg387/compiled/drracket/errortrace/: more-scheme_rkt.zo
Custom_Scheme_Complier-hg387/: .gitignore  README.md  lazy-mceval.rkt  mceval.rkt
Custom_Scheme_Complier-hg387/.devcontainer/: devcontainer.json
HaskellIntro-hg387/: .travis.yml  README.md
IntervalSetsRedux_Haskell-hg387/: README.md
IntervalSetsRedux_Haskell-hg387/src/: IntSet.hs
IntervalSetsRedux_Haskell-hg387/test/: IntSetPropertySpec.hs  IntSetUnitSpec.hs
MoreScheme-hg387/: Makefile  README.md  scheme.rkt
MoreScheme-hg387/.devcontainer/: Dockerfile
Property_Testing_Haskell-hg387/: .gitignore  README.md  intset.cabal  stack.yaml
Property_Testing_Haskell-hg387/src/: IntSet.hs
Property_Testing_Haskell-hg387/test/: IntSetUnitSpec.hs
hw0-hg387/: .gitignore  README.md
hw1-hg387/: .gitignore  README.md  tests.rkt
hw2-hg387/: more-scheme.rkt  tests.rkt
hw2-hg387/.github/workflows/: push.yml
hw2-hg387/compiled/drracket/errortrace/: more-scheme_rkt.dep  tests_rkt.dep  tests_rkt.zo
hw3-hg387/: .gitignore  HaskellIntro.hs  haskell-intro.cabal
hw3-hg387/test/: HaskellIntroSpec.hs
