name:          haskell-intro
version:       0.1
cabal-version: >= 1.10

build-type: Simple

library
  build-depends:
    base >= 4 && < 5

  exposed-modules:
    HaskellIntro
    Set

  default-language: Haskell98

  ghc-options: -Wall

test-suite spec
  type:    exitcode-stdio-1.0
  main-is: Spec.hs

  hs-source-dirs: test

  other-modules:
    HaskellIntroSpec

  build-depends:
    haskell-intro,
    base       >= 4   && < 5,
    hspec      >= 2.7 && < 2.8,
    oeis       == 0.3.10,
    QuickCheck >= 2.13 && < 2.14

  default-language: Haskell98
